syntax = "proto3";
package ch7;
option java_package = "happy.chat.common.request";
option java_outer_classname = "HeartBeatRequest";

message HeartBeat {

  int32 version = 1;

  int32 command = 2;
}